<resources>
    <string name="app_name">EnsineMeApp</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">CADASTRAR</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="invalid_email_password">Email ou senha inválidos.</string>
    <string name="invalid_password_length">A senha deve ter pelo menos 8 caracteres.</string>
    <string name="login_failed">Login falhou. Por favor, tente novamente.</string>
    <string name="welcome_message">Bem-vindo, %1$s</string>
    <string name="last_login_message">Último login: %1$s</string>
    <string name="show_token">Mostrar Token</string>
    <string name="hide_token">Esconder Token</string>
    <string name="signup_title">Cadastrar</string>
    <string name="signup_success">Sucesso ao registrar. Toque para prosseguir.</string>
    <string name="signup_error">Algo deu errado. Tente novamente.</string>
    <string name="next_button">Prosseguir</string>
    <string name="register_button">Cadastrar</string>
    <string name="name_hint">Nome</string>
    <string name="token_message">Token: %1$s</string>
    <string name="uuid_message">UUID: %1$s</string>
    <string name="role_message">Cargo: %1$s</string>
    <string name="main_title">Seja bem-vindo!</string>
    <string name="register">Ainda não possuí uma conta? Comece por aqui!</string>
    <string name="welcome_back">Que bom te ver de novo!</string>
    <string name="logout">Logout</string>
    <string name="token">Show Token</string>
</resources>
